Subnav z-index fix

--- a/app/styles/layout/_general.scss
+++ b/app/styles/layout/_general.scss
@@ -11,7 +11,6 @@ $subnav-background: $grayLighter;
     height:$subnav-height;
     background: $subnav-background;
     border-bottom: 0px;
-    z-index: 1;
     @include box-shadow-both(0 1px 3px rgba(0,0,0,0.07), 0 1px 0 0 rgba(0,0,0,0.1));
     @include transition(all, 0.3s, ease);
     &--padded {
